# async-web-search

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  dev_setup.sh  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  ruff.toml
.github/workflows/: publish.yml  server.yml
server/: .env.example  README.md  __init__.py  index.py  requirements.txt  server.py  utils.py
server/src/: index.py
server/src/templates/: demo.html
server/tests/: __init__.py  conftest.py  test_server.py
src/web_search/: __init__.py  arxiv.py  base.py  config.py  github.py  google.py  newsapi.py  pubmed.py  search.py  wikipedia.py  wikipedia_.py
tests/: __init__.py  base_utils.py  conftest.py  test_arxiv_search.py  test_github_search.py  test_google_search.py  test_newsapi_search.py  test_pubmed_int_search.py  test_pubmed_search.py  test_sample.py  test_search.py  test_wikipedia_search.py
